--- a/grid-layout.properties
+++ b/grid-layout.properties
@@ -11,8 +11,17 @@ border.color.blue=0
 blank.row.height=50
 rectangle.min.size=200
 
+#can not be too large, it may width or height
+shock.size=10
+
+
+#number of category
+category.number=10
+#each category's total count
+each.category.total=2
 
 
 #total 100
 probability.blank=80
 probability.split=70
+
