add table layout

--- a/grid-layout.properties
+++ b/grid-layout.properties
@@ -10,13 +10,17 @@ border.color.green=0
 border.color.blue=0
 blank.row.height=50
 rectangle.min.size=200
+#rectangle parent random (start point| end point), will + random.offsize(ro)
+#start point x=padding.left + ro, y=padding.top + ro
+#end point x=total.width - padding.right - ro, y=total.height-padding.bottom-ro
+rectangle.parent.max.offsize=200
 
 #can not be too large, it may width or height
 shock.size=10
 
 
 #number of category
-category.number=10
+category.number=5
 #each category's total count
 each.category.total=2
 
@@ -25,3 +29,33 @@ each.category.total=2
 probability.blank=80
 probability.split=70
 
+probability.noise.top=100
+probability.noise.bottom=80
+probability.noise.left=50
+probability.noise.right=50
+
+
+
+
+#default signature 200*80
+signature.react.max.width=256
+signature.react.max.height=256
+#default max = 10
+signature.max=10
+signature.min=1
+
+
+mark.border.color.red=255
+mark.border.color.green=255
+mark.border.color.blue=255
+
+mark.rectangle.padding.top=0
+mark.rectangle.padding.bottom=0
+mark.rectangle.padding.left=0
+mark.rectangle.padding.right=0
+
+
+
+#/data/signature/val
+#signature.dir=D:/data/temp/val
+signature.dir=/data/signature/val
