--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
                             <archive>
                                 <manifest>
                                     <!--<mainClass>com.poc.pdf.Base</mainClass>-->
-                                    <mainClass>com.poc.pdf.base.GridLines</mainClass>
+                                    <mainClass>com.poc.pdf.SignatureBase</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
