--- a/table-layout.properties
+++ b/table-layout.properties
@@ -30,19 +30,19 @@ cell.min.height=50
 cell.row.limit=4
 cell.column.limit=4
 #number of category and max = 1000
-category.number=2
+category.number=50
 #each category's total count and max = 1000
-each.category.total=2
+each.category.total=5
 #max 900000
-begin.at=900000
-distance=1000
+begin.at=10
+distance=5
 
 #total 100
 probability.merge=70
 
 mark.border.color.red=255
-mark.border.color.green=255
-mark.border.color.blue=255
+mark.border.color.green=0
+mark.border.color.blue=0
 
 
 #must less then cell padding
@@ -75,5 +75,5 @@ signature.max=10
 signature.min=1
 
 #/data/signature/val
-#signature.dir=D:/data/temp/val
-signature.dir=/data/signature/val
+signature.dir=D:/data/temp/val
+#signature.dir=/data/signature/val
