--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <version>1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
