--- a/grid-layout.properties
+++ b/grid-layout.properties
@@ -57,5 +57,5 @@ mark.rectangle.padding.right=0
 
 
 #/data/signature/val
-#signature.dir=D:/data/temp/val
-signature.dir=/data/signature/val
+signature.dir=D:/data/temp/val
+#signature.dir=/data/signature/val
