--- a/grid-layout.properties
+++ b/grid-layout.properties
@@ -20,9 +20,9 @@ shock.size=10
 
 
 #number of category
-category.number=5
+category.number=1
 #each category's total count
-each.category.total=2
+each.category.total=10
 
 
 #total 100
@@ -57,5 +57,10 @@ mark.rectangle.padding.right=0
 
 
 #/data/signature/val
-signature.dir=D:/data/temp/val
+#signature.dir=D:/data/temp/val
 #signature.dir=/data/signature/val
+signature.dir=C:/Users/e521907/home/data/signature-temp/val
+
+
+fixed.structure.enable=true
+fixed.structure.json.list=grid-json/type-0-0.json,grid-json/type-1-0.json
