--- a/normal-table-layout.properties
+++ b/normal-table-layout.properties
@@ -15,9 +15,9 @@ border.color.red=0
 border.color.green=0
 border.color.blue=0
 #default cell.padding=5
-cell.padding.top=20
-cell.padding.right=10
-cell.padding.bottom=10
+cell.padding.top=10
+cell.padding.right=15
+cell.padding.bottom=5
 cell.padding.left=20
 #exclude padding default 20,20
 cell.min.width=90
@@ -30,9 +30,9 @@ cell.min.height=50
 cell.row.limit=4
 cell.column.limit=4
 #number of category and max = 1000
-category.number=5
+category.number=20
 #each category's total count and max = 1000
-each.category.total=20
+each.category.total=1
 #max 900000
 begin.at=10
 distance=5
@@ -65,7 +65,7 @@ probability.noise.table=50
 probability.noise.top=100
 probability.noise.bottom=80
 probability.noise.left=50
-probability.noise.right=50
+probability.noise.right=0
 
 #default signature 200*80
 signature.react.max.width=256
@@ -79,4 +79,12 @@ blank.fill.string=NA
 
 #/data/signature/val
 signature.dir=D:/data/temp/val
+#signature.dir=C:/Users/e521907/home/data/signature-temp/val
 #signature.dir=/data/signature/val
+
+mock.data.path=mock-data-basic.txt
+mock.data.head.shuffle=true
+
+
+fixed.structure.enable=true
+fixed.structure.json.list=normal-table-json/000010.json,normal-table-json/000015.json,normal-table-json/000020.json,normal-table-json/000025.json,normal-table-json/000030.json,normal-table-json/000035.json,normal-table-json/000040.json,normal-table-json/000045.json,normal-table-json/000050.json,normal-table-json/000055.json,normal-table-json/000060.json,normal-table-json/000065.json,normal-table-json/000070.json,normal-table-json/000075.json,normal-table-json/000080.json,normal-table-json/000085.json,normal-table-json/000090.json,normal-table-json/000095.json
