--- a/table-layout.properties
+++ b/table-layout.properties
@@ -32,7 +32,7 @@ cell.column.limit=4
 #number of category and max = 1000
 category.number=5
 #each category's total count and max = 1000
-each.category.total=20
+each.category.total=10
 #max 900000
 begin.at=10
 distance=5
@@ -78,5 +78,10 @@ blank.fill.disable=false
 blank.fill.string=NA
 
 #/data/signature/val
-signature.dir=D:/data/temp/val
+#signature.dir=D:/data/temp/val
 #signature.dir=/data/signature/val
+signature.dir=C:/Users/e521907/home/data/signature-temp/val
+
+
+fixed.structure.enable=true
+fixed.structure.json.list=table-json/000010.json
