--- a/simulate-config.properties
+++ b/simulate-config.properties
@@ -1,6 +1,10 @@
 #signature.dir=/data/signature/val
 signature.dir=D:/data/temp/val
-noise.enable=true
+noise.enable=false
 mark.enable=false
 janus.henderson.total=20
 janus.henderson.prefix=janus-henderson
+lazard.tran.total=20
+lazard.tran.prefix=lazard-tran
+pimco.total=20
+pimco.prefix=pimco
