--- a/table-layout.properties
+++ b/table-layout.properties
@@ -80,8 +80,8 @@ blank.fill.string=NA
 #/data/signature/val
 #signature.dir=D:/data/temp/val
 #signature.dir=/data/signature/val
-signature.dir=C:/Users/e521907/home/data/signature-temp/val
+signature.dir=D:/data/temp/val
 
 
-fixed.structure.enable=true
+fixed.structure.enable=false
 fixed.structure.json.list=table-json/000010.json
