--- a/simulate-config.properties
+++ b/simulate-config.properties
@@ -1,7 +1,15 @@
+#PDF Rectangle(A4) PageSize A4 = new PageSize(595.0F, 842.0F)
+#Default Picture VS PDF = 1:1
+#if picture (1728,2586), Picture VS PDF = 3:1 (take the large one)
+picture.width=1728
+picture.height=2586
+#true will take the large one, else take the other
+picture.scale.large=false
+
 #signature.dir=/data/signature/val
 signature.dir=D:/data/temp/val
-noise.enable=false
-mark.enable=false
+noise.enable=true
+mark.enable=true
 janus.henderson.total=20
 janus.henderson.prefix=janus-henderson
 lazard.tran.total=20
